--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
         <h1>FS Filmbolaget</h1>
-        <img src="img/logo.png" alt="Movie logotyp" style="width: 100%;">
+        <img src="img/logo.png" alt="Movie logotyp" style="width: 100%; max-width: 100px;">
     </header>
 
     <!-- Main Content -->
@@ -37,8 +37,8 @@
         <section id="relevant-links">
             <h2>Relaterade länkar</h2>
             <ul>
-                <li><a href="https://www.universalpictures.se/micro/oppenheimer" target="_blank">Officiell webbplats</a></li>
                 <li><a href="https://www.imdb.com/title/tt15398776/" target="_blank">IMDb-sida</a></li>
+                <li><a href="https://www.universalpictures.se/micro/oppenheimer" target="_blank">Officiell webbplats</a></li>
             </ul>
         </section>
 
